--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,13 +14,14 @@ html, body {
 }
 
 .square {
-  height: 300px;
+  height: 240px;
+  width: 240px;
   border: 1px solid #593d3b;
   border-radius: 3%;
 }
 
 .svgworkspace {
-  margin-top: 60px;
+  margin-top: 35px;
 }
 
 .step {
@@ -28,7 +29,7 @@ html, body {
 }
 
 .container {
-  max-width: 700px;
+  max-width: 700px !important;
 }
 
 .newcontainer {
@@ -113,10 +114,6 @@ html, body {
   padding: 28px 0 !important;
 }
 
-.svgcol {
-  max-width: 150px;
-}
-
 .svgapple, .svggoogle {
   height: 56px;
   border-radius: 4px;
@@ -130,6 +127,19 @@ html, body {
 
 .svggoogle {
   border: 1px solid gray;
+}
+
+.svggooglepay {
+  padding-left: 0px !important;
+}
+
+.v-input__slot {
+  border: 1px solid #593d3b;
+  box-shadow: none !important;
+}
+
+.checkbox > div > div {
+  border: none;
 }
 
 @media only screen and (max-width: 375px) {
@@ -176,5 +186,8 @@ html, body {
 
   .step4 div > span {
     top: 460px !important;
+  }
+  .svggooglepay {
+    padding-left: 12px !important;
   }
 }
