use prettier extension to format code from master branch

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,19 +1,21 @@
 @font-face {
   font-family: 'Enriq';
-  src:url('~assets/fonts/ENRIQRegular.ttf')
+  src: url('~assets/fonts/ENRIQRegular.ttf');
 }
 
 @font-face {
   font-family: 'Noto Sans';
-  src:url('~assets/fonts/NotoSans-Regular.ttf')
+  src: url('~assets/fonts/NotoSans-Regular.ttf');
 }
 
 @font-face {
   font-family: 'Noto Serif';
-  src:url('~assets/fonts/NotoSerif-Regular.ttf')
+  src: url('~assets/fonts/NotoSerif-Regular.ttf');
 }
 
-h1, h3, .step-button {
+h1,
+h3,
+.step-button {
   font-family: 'Enriq';
 }
 
@@ -25,7 +27,9 @@ h3 {
   font-size: 32px;
 }
 
-h4, .noto-serif, input[type="text"]{
+h4,
+.noto-serif,
+input[type='text'] {
   font-family: 'Noto Serif';
 }
 
@@ -42,7 +46,7 @@ p {
 }
 
 p,
-.step1 div > span, 
+.step1 div > span,
 .step2 div > span,
 .step3 div > span,
 .step4 div > span {
@@ -51,7 +55,7 @@ p,
   font-size: 18px !important;
 }
 
-.step1 div > span, 
+.step1 div > span,
 .step2 div > span,
 .step3 div > span,
 .step4 div > span {
