--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -200,6 +200,13 @@ body {
   border: 1px solid #777777;
 }
 
+.date {
+  max-width: 60px !important;
+}
+.status-placeholder {
+  max-width: 30px !important;
+}
+
 @media only screen and (max-width: 375px) {
   .step1-bg,
   .step2-bg,
