--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -168,34 +168,32 @@ body {
   top: 12px;
 }
 
-.status-green {
+.status-green,
+.status-yellow,
+.status-red,
+.status-gray {
+  margin-top: 3px;
   height: 24px;
   width: 24px;
   border-radius: 50%;
+}
+
+.status-green {
   background-color: #a7d36f;
   border: 1px solid #a7d36f;
 }
 
 .status-yellow {
-  height: 24px;
-  width: 24px;
-  border-radius: 50%;
   background-color: #f5e658;
   border: 1px solid #f5e658;
 }
 
 .status-red {
-  height: 24px;
-  width: 24px;
-  border-radius: 50%;
   background-color: #eb6258;
   border: 1px solid #eb6258;
 }
 
 .status-gray {
-  height: 24px;
-  width: 24px;
-  border-radius: 50%;
   background-color: #777777;
   border: 1px solid #777777;
 }
