--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -46,6 +46,10 @@ h5 {
   color: #000000 !important;
 }
 
+.f-16 {
+  font-size: 16px !important;
+}
+
 .deliverable-description {
   font-size: 16px;
 }
