--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -32,6 +32,10 @@ body {
   max-width: 700px !important;
 }
 
+.container-1000 {
+  max-width: 1000px !important;
+}
+
 .container-1200 {
   max-width: 1200px !important;
 }
@@ -203,6 +207,18 @@ body {
 }
 .status-placeholder {
   max-width: 30px !important;
+}
+
+.svg-container {
+  border: 1px solid black;
+  width: 400px;
+  height: 250px;
+  padding-top: 45px;
+}
+
+.svg-live {
+  display: block;
+  margin: auto;
 }
 
 @media only screen and (max-width: 375px) {
