add functionality on steps and redirect to live page

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -237,6 +237,12 @@ body {
   padding: 50px;
 }
 
+.site-border {
+  border: 2px solid #593d3b;
+  min-width: 200px;
+  height: 150px;
+}
+
 .editori-container {
   border: 4.6px solid #6f5e53;
   line-height: 1.15;
