add alert functionality

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -261,6 +261,21 @@ body {
   background-color: #c4c4c4;
 }
 
+.success-alert {
+  width: 420px;
+  position: absolute !important;
+  right: 0px;
+  z-index: 1;
+}
+
+.holder {
+  position: relative;
+}
+
+.v-alert__wrapper > i::before {
+  display: none;
+}
+
 @media only screen and (max-width: 375px) {
   .step1-bg,
   .step2-bg,
