--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -28,6 +28,10 @@ body {
   border-left: none !important;
 }
 
+.container-300 {
+  max-width: 300px !important;
+}
+
 .container-700 {
   max-width: 700px !important;
 }
@@ -228,6 +232,9 @@ body {
   font-family: Enriq;
   color: #6f5e53;
   font-weight: 700;
+  position: absolute;
+  margin-top: 15px;
+  margin-left: 15px;
 }
 
 .editori-border {
