--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -244,12 +244,6 @@ body {
   padding: 50px;
 }
 
-.site-border {
-  min-width: 200px;
-  height: 150px;
-  border: 2px solid #593d3b;
-}
-
 .editori-container {
   border: 4.6px solid #6f5e53;
   line-height: 1.15;
@@ -281,6 +275,11 @@ body {
 
 .v-alert__wrapper > i::before {
   display: none;
+}
+
+.sample-sites {
+  height: 200px !important;
+  width: 300px !important;
 }
 
 @media only screen and (max-width: 375px) {
