--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -280,6 +280,8 @@ body {
 .sample-sites {
   height: 200px !important;
   width: 300px !important;
+  box-shadow: none;
+  border: 2px solid #593d3b;
 }
 
 @media only screen and (max-width: 375px) {
