rework login page

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -220,6 +220,11 @@ body {
   padding-top: 45px;
 }
 
+.editori {
+  height: 60px;
+  width: 60px;
+}
+
 .editori-logo {
   color: white;
   background-color: #6f5e53;
