--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -108,3 +108,8 @@ p,
 .text-light-brown {
   color: #6f5e53 !important;
 }
+
+.link-style {
+  text-decoration: none;
+  color: #000000 !important;
+}
