--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,6 +6,10 @@ body {
   overflow-x: hidden;
 }
 
+.navbar {
+  background-color:whitesmoke ;
+}
+
 .round-corners {
   border-radius: 50%;
   border: 1px solid #593d3b;
@@ -264,6 +268,14 @@ body {
   width: 250px;
   border-radius: 50%;
   border: 1px solid #c4c4c4;
+  background-color: #c4c4c4;
+}
+
+.avatar-placeholder {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: 4px solid white;
   background-color: #c4c4c4;
 }
 
