add proper label to charts, fix v-model issues, add avatar & minor details

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -96,6 +96,11 @@ p,
   padding-bottom: 10px;
 }
 
+.text-white {
+  color: white;
+  font-weight: 300 !important;
+}
+
 .text-gray {
   color: gray;
   font-weight: 300 !important;
