--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -1,7 +1,3 @@
-.step-button {
-  font-family: 'Montserrat';
-}
-
 h1 {
   font-size: 48px;
 }
@@ -26,35 +22,7 @@ h5 {
   font-size: 24px;
   letter-spacing: 0.65px;
   text-decoration: none;
-  color: #000000 !important;
-}
-
-.f-16 {
-  font-size: 16px !important;
-}
-
-.deliverable-description {
-  font-size: 16px;
-}
-
-.step-button {
-  font-weight: 700 !important;
-  font-size: 18px !important;
-}
-
-.brown-btn {
-  background-color: #593d3b !important;
-  color: white !important;
-}
-
-.grey-btn {
-  color: #777777 !important;
-  background-color: #dddddd !important;
-}
-
-.brown-btn,
-.grey-btn {
-  min-width: 140px !important;
+  color: #000000;
 }
 
 .step1 div > span,
@@ -71,27 +39,4 @@ h5 {
 .step3 div > span,
 .step4 div > span {
   padding-bottom: 10px;
-}
-
-.text-white {
-  color: white;
-  font-weight: 300 !important;
-}
-
-.text-gray {
-  color: gray;
-  font-weight: 300 !important;
-}
-
-.text-brown {
-  color: #593d3b !important;
-}
-
-.text-light-brown {
-  color: #6f5e53 !important;
-}
-
-.link-style {
-  text-decoration: none;
-  color: #000000 !important;
 }
