Flatten SiteOverview into performance/index.vue, and make UI tweaks

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -17,9 +17,10 @@ h5 {
   font-size: 16px;
 }
 
-.title {
+.section-title {
   font-family: 'Noto Sans';
   font-size: 24px;
+  font-weight: 700;
   letter-spacing: 0.65px;
   text-decoration: none;
   color: #000000;
