remove more git text

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -4,6 +4,7 @@
   font-weight: 400;
   font-display: swap;
   src: url('~assets/fonts/NotoSans-Light.ttf') format('truetype');
+}
 
 h1 {
   font-size: 48px;
@@ -47,5 +48,4 @@ h5 {
 .step3 div > span,
 .step4 div > span {
   padding-bottom: 10px;
->>>>>>> master
 }
