--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,6 +6,14 @@ body {
   overflow-x: hidden;
 }
 
+.container-1200 {
+  max-width: 1200px;
+}
+
+.container-700 {
+  max-width: 700px;
+}
+
 .container-row,
 .container-column {
   display: flex;
@@ -28,12 +36,29 @@ body {
   flex-wrap: nowrap;
 }
 
+.center {
+  text-align: center;
+}
+
+.margin-auto {
+  margin: auto;
+}
+
+.width-100 {
+  width: 100%;
+}
+
+.text-brown {
+  color: #593d3b;
+}
+
 .round-corners {
   border-radius: 50%;
   border: 1px solid #593d3b;
   padding: 22px;
   height: 80px;
   width: 80px;
+  margin: auto;
 }
 
 .workspace-border {
