--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -64,6 +64,10 @@ body {
   color: #593d3b;
 }
 
+.text-white {
+  color: white;
+}
+
 .round-corners {
   border-radius: 50%;
   border: 1px solid #593d3b;
