--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,6 +14,10 @@ body {
   max-width: 700px;
 }
 
+.container-500 {
+  max-width: 500px;
+}
+
 .container-row,
 .container-column {
   display: flex;
@@ -98,7 +102,7 @@ body {
 }
 
 .workspace-container {
-  height: 700px;
+  height: 500px;
   justify-content: space-between;
   flex-direction: column;
   display: flex;
